...
          tabBarBadgeStyle: { backgroundColor: colors.red[500] },
        }} 
      />
      <Tabs.Screen 
        name="menu" 
        options={{ 
          title: 'Menu',
          tabBarIcon: ({ color }) => <MenuIcon color={color as any} size={24} />,
        }} 
      />
      <Tabs.Screen 
        name="chat" 
        options={{ 
...
